# cutil-playground

pkg1/: CMakeLists.txt  test.cpp
pkg1/cmake/: helpers.cmake
pkg1/default_implementation/include/: simple_calc.h
pkg1/default_implementation/src/: imp.cpp
pkg1/interface/include/: calculator_interface.h
pkg1/interface/src/: calculator_interface.cpp
pkg2/: CMakeLists.txt  main.cpp
